
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef scalar_t__ u64 ;
typedef int u32 ;
struct xdp_umem {int dummy; } ;
struct xdp_buff {int handle; scalar_t__ data_hard_start; scalar_t__ data; } ;
struct i40e_ring {size_t queue_index; int netdev; TYPE_1__* vsi; int xdp_prog; struct xdp_umem* xsk_umem; } ;
struct bpf_prog {int dummy; } ;
struct TYPE_2__ {struct i40e_ring** xdp_rings; } ;


 int I40E_XDP_CONSUMED ;
 int I40E_XDP_PASS ;
 int I40E_XDP_REDIR ;
 struct bpf_prog* READ_ONCE (int ) ;





 int bpf_prog_run_xdp (struct bpf_prog*,struct xdp_buff*) ;
 int bpf_warn_invalid_xdp_action (int) ;
 int i40e_xmit_xdp_tx_ring (struct xdp_buff*,struct i40e_ring*) ;
 int rcu_read_lock () ;
 int rcu_read_unlock () ;
 int trace_xdp_exception (int ,struct bpf_prog*,int) ;
 int xdp_do_redirect (int ,struct xdp_buff*,struct bpf_prog*) ;
 int xsk_umem_adjust_offset (struct xdp_umem*,int ,scalar_t__) ;

__attribute__((used)) static int i40e_run_xdp_zc(struct i40e_ring *rx_ring, struct xdp_buff *xdp)
{
 struct xdp_umem *umem = rx_ring->xsk_umem;
 int err, result = I40E_XDP_PASS;
 struct i40e_ring *xdp_ring;
 struct bpf_prog *xdp_prog;
 u64 offset;
 u32 act;

 rcu_read_lock();



 xdp_prog = READ_ONCE(rx_ring->xdp_prog);
 act = bpf_prog_run_xdp(xdp_prog, xdp);
 offset = xdp->data - xdp->data_hard_start;

 xdp->handle = xsk_umem_adjust_offset(umem, xdp->handle, offset);

 switch (act) {
 case 130:
  break;
 case 128:
  xdp_ring = rx_ring->vsi->xdp_rings[rx_ring->queue_index];
  result = i40e_xmit_xdp_tx_ring(xdp, xdp_ring);
  break;
 case 129:
  err = xdp_do_redirect(rx_ring->netdev, xdp, xdp_prog);
  result = !err ? I40E_XDP_REDIR : I40E_XDP_CONSUMED;
  break;
 default:
  bpf_warn_invalid_xdp_action(act);

 case 132:
  trace_xdp_exception(rx_ring->netdev, xdp_prog, act);

 case 131:
  result = I40E_XDP_CONSUMED;
  break;
 }
 rcu_read_unlock();
 return result;
}
